<resources>
    <string name="app_name">psychologicalTest</string>
    <string name="Home_title">恋爱中你是哪部剧的女主角？如果标题很长就换行</string>
    <string name="Home_introduction">人们容易在恋爱时表露出自己深藏起来的人格，而这种人格往往暗示着内心的真实需求。在恋爱中，你会扮演着什么样的角色？测测看吧！</string>
    <string name="Home_otherTitle">大家都在测</string>
    <string name="test_title1">测测你是不是世界杯的忠实粉丝</string>
    <string name="test_introduction1">这几天，你也深夜不睡，炯炯有神地看球赛了么？那么你是真球迷还是伪球迷呢？让这个趣味测试告诉你吧！</string>
    <string name="test_title2">心理极限测试： 你的承受力有多高？</string>
    <string name="test_introduction2">每个人都有着不一样的心理承受能力，你的承受极限又到了那一个等级了呢？立刻开始测试吧。</string>
    <string name="detail_title">恋爱中你是哪部剧的女主角？如果标题很长就换行</string>
    <string name="detail_introduction">人们容易在恋爱时表露出自己深藏起来的人格，而这种人格往往暗示着内心的真实需求。在恋爱中，你会扮演着什么样的角色？测测看吧！</string>
    <string name="startTest_bt">开始测试</string>
    <string name="radio_title">当他/她在家里打游戏的时候，这时你会：</string>
    <string name="radio_a">觉得他/她根本不在乎你</string>
    <string name="radio_b">觉得他/她就是一个小孩子，总喜欢玩游戏(延长用作测试)</string>
    <string name="radio_c">在他/她身边做自己的事</string>
    <string name="radio_d">建议他/她带上自己一起玩</string>
    <string name="radio_e">让他/她不管怎样都不该对你板着脸</string>
    <string name="git">提交</string>
    <string name="testResult">测试结果</string>
    <string name="testResult_title">测试结果：火焰型天才</string>
    <string name="testResult_introuduction">你属于火焰型天才。火焰型天才是天生的外交官，他们善于交流，说服力强，能够体察他人的心思，并且十分注重自身的人际关系，但他们却不太能够注意到细节，以及在计算和分析能力上较为薄弱。</string>
    <string name="testResult_success">成功的法则：通过夸大自己来创造优势。他们会问自己一个问题，“这只有我能做吗？他们通过自己正在扩大的交际圈来建立自己品牌。他们就是爱夸大自己的作用。</string>
    <string name="generate_post">生成海报</string>
    <string name="sharefriend">发给微信好友</string>


</resources>
