<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestResult"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:maxEms="3"
            android:ellipsize="end"
            android:text="@string/testResult"
            android:textColor="#000"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photo"
                android:adjustViewBounds="true"
                android:maxHeight="280dp"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testResult_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testResult_introuduction"
                android:textColor="#666666"
                android:textSize="14sp"
                android:lineSpacingExtra="10dp"/>
            <TextView
                android:layout_marginTop="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testResult_success"
                android:textColor="#666666"
                android:textSize="14sp"
                android:lineSpacingExtra="10dp"/>

            <Button
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:paddingRight="65dp"
                android:textSize="16sp"
                android:text="@string/generate_post"
                android:drawablePadding="5dp"
                android:background="@drawable/testresult_button"
                android:drawableLeft="@drawable/generateposter_icon"
                android:paddingLeft="30dp"/>

            <Button
                android:onClick="onsharebuttonClicked"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:paddingRight="30dp"
                android:textSize="16sp"
                android:text="@string/sharefriend"
                android:drawablePadding="5dp"
                android:background="@drawable/testresult_button"
                android:drawableLeft="@drawable/sharefriend_icon"
                android:paddingLeft="30dp"
                android:layout_marginBottom="30dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f7f7f7"/>

                <TextView
                    android:id="@+id/home_other_title"
                    android:layout_marginTop="22dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Home_otherTitle"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:textSize="16dp"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/home_othertests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>




        </LinearLayout>

    </ScrollView>



</LinearLayout>