<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/test_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxEms="8"
                android:text="@string/Home_title"
                android:textColor="#000"
                android:textSize="20sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ececec"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/radio_pages"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3/24"
        android:textSize="17sp"
        android:textColor="#999999"/>

    <TextView
        android:id="@+id/radio_title"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_title"
        android:textSize="17sp"
        android:textColor="#f96645"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_a"
            style="@style/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_a"
            />
        <View
            android:layout_gravity="end"
            android:layout_width="315dp"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_alignParentBottom="true"/>
        <RadioButton
            android:id="@+id/radio_b"
            style="@style/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_b"
            />
        <View
            android:layout_gravity="end"
            android:layout_width="315dp"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_alignParentBottom="true"/>

        <RadioButton
            android:id="@+id/radio_c"
            style="@style/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_c"
            />
        <View
            android:layout_gravity="end"
            android:layout_width="315dp"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_alignParentBottom="true"/>

        <RadioButton
            android:id="@+id/radio_d"
            style="@style/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_d"
            />
        <View
            android:layout_gravity="end"
            android:layout_width="315dp"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_alignParentBottom="true"/>

        <RadioButton
            android:id="@+id/radio_e"
            style="@style/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_e"
            />
        <View
            android:layout_gravity="end"
            android:layout_width="315dp"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_alignParentBottom="true"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/back"
            android:maxWidth="100dp"
            android:maxHeight="30dp"/>

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/next"
            android:maxWidth="100dp"
            android:maxHeight="30dp"/>

        <Button
            android:layout_width="165dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/radio_btcorner"
            android:layout_centerHorizontal="true"
            android:text="@string/git"
            android:textColor="#000"
            android:textSize="16sp"
            />
    </RelativeLayout>


</LinearLayout>