<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestDetailsActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/detail_title"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10dp"
        android:text="@string/detail_title"
        android:textStyle="bold"
        android:textColor="#333333"
        android:textSize="16sp"/>
    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">
        <ImageView
            android:id="@+id/detail_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo"
            android:adjustViewBounds="true"
            android:maxWidth="670dp"
            android:maxHeight="376dp"
            />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/detail_introduction"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#666666"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_introduction"
        android:lineSpacingExtra="15dp"
        android:textSize="15sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="165dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bt_corner"
            android:layout_centerHorizontal="true"
            android:text="@string/startTest_bt"
            android:textColor="#fff"
            android:textSize="16sp"
            />
    </RelativeLayout>

</LinearLayout>