<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioImgActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/test_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxEms="8"
                android:text="@string/Home_title"
                android:textColor="#000"
                android:textSize="20sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ececec"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="3/24"
                android:textColor="#999999"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/radio_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/radio_title"
                android:textColor="#f96645"
                android:textSize="17sp" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="74dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/radioimg_titlepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="220dp"
                    android:maxHeight="165dp"
                    android:src="@drawable/photo" />
            </android.support.v7.widget.CardView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioimg_a"
                    style="@style/radioimgButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/radio_a" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="17dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/radioimg_pagea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="135dp"
                        android:maxHeight="101dp"
                        android:src="@drawable/photo" />
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="315dp"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:background="#ececec" />

                <RadioButton
                    android:id="@+id/radioimg_b"
                    style="@style/radioimgButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/radio_b" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="17dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/radioimg_pageb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="135dp"
                        android:maxHeight="101dp"
                        android:src="@drawable/photo" />
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="315dp"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:background="#ececec" />

                <RadioButton
                    android:id="@+id/radioimg_c"
                    style="@style/radioimgButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/radio_c" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="17dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/radioimg_pagec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="135dp"
                        android:maxHeight="101dp"
                        android:src="@drawable/photo" />
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="315dp"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:background="#ececec" />

                <RadioButton
                    android:id="@+id/radioimg_d"
                    style="@style/radioimgButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/radio_d" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="17dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/radioimg_paged"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="135dp"
                        android:maxHeight="101dp"
                        android:src="@drawable/photo" />
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="315dp"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:background="#ececec" />

                <RadioButton
                    android:id="@+id/radioimg_e"
                    style="@style/radioimgButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_e" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="17dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/radioimg_pagee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="135dp"
                        android:maxHeight="101dp"
                        android:src="@drawable/photo" />
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="315dp"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:background="#ececec" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="100dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/back" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="25dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="100dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/next" />

                <Button
                    android:onClick="commit"
                    android:layout_width="165dp"
                    android:layout_height="44dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/radio_btcorner"
                    android:layout_marginBottom="50dp"
                    android:text="@string/git"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>





</LinearLayout>